# b3data

./: .gitignore  LICENSE  README.md  b3_ch_fetcher.py  b3_cotacaohistorica_fetcher.py  fetch.py  pyproject.toml
b3_cotacaohistorica_fetcher/: cli.py  config.py  dates.py  fetcher.py
b3data/: dates.py  fetcher.py  reader.py
b3data/auxiliary_tables/: codbdi.csv  especi.csv  indopc.csv  registro00.csv  registro01.csv  registro99.csv  tpmerc.csv
src/b3data/historic/: dates.py  fetcher.py
