[tool.poetry]
name = "b3-cotacaohistorica-fetcher"
version = "0.1.2"
description = "Coletor de dados de cotação histórica da B3"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "b3_cotacaohistorica_fetcher"}]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
