[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3data"
description = "Coletor de dados de cotação histórica da B3"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Komesu", email = "danielkomesu@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx",
  "pandas"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/data-arq/b3-cotacaohistorica-fetcher#readme"
Issues = "https://github.com/data-arq/b3-cotacaohistorica-fetcher/issues"
Source = "https://github.com/data-arq/b3-cotacaohistorica-fetcher"

[tool.hatch.version]
path = "b3data/__init__.py"
