[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3data-historic"
description = "B3's historical quotes data downloader"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Daniel Komesu", email = "danielkomesu@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx",
  "pandas",
  "python-dateutil",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/dankkom/b3data-historic#readme"
Issues = "https://github.com/dankkom/b3data-historic/issues"
Source = "https://github.com/dankkom/b3data-historic"

[tool.hatch.version]
path = "src/b3data/historic/__init__.py"
